fix: Update Z-index for dropdown-menu

--- a/src/cs_dynamicpages/browser/static/dynamicpageview.css
+++ b/src/cs_dynamicpages/browser/static/dynamicpageview.css
@@ -201,3 +201,7 @@ body.template-dynamic-view.can_edit {
     }
   }
 }
+
+.dynamic-row .dropdown-menu {
+  z-index: 1030; /* Ensure dropdown is above other elements */
+}
